@@ -1,44 +1,28 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
- * The Universal Permissive License (UPL), Version 1.0
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
- * Subject to the condition set forth below, permission is hereby granted to any
- * person obtaining a copy of this software, associated documentation and/or
- * data (collectively the "Software"), free of charge and under any and all
- * copyright rights in the Software, and any and all patent rights owned or
- * freely licensable by each licensor hereunder covering either (i) the
- * unmodified Software as contributed to or provided by such licensor, or (ii)
- * the Larger Works (as defined below), to deal in both
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
- * (a) the Software, and
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- * (b) any piece of software and/or hardware listed in the lrgrwrks.txt file if
- * one is included with the Software each a "Larger Work" to which the Software
- * is contributed by such licensors),
- *
- * without restriction, including without limitation the rights to copy, create
- * derivative works of, display, perform, and distribute the Software and make,
- * use, sell, offer for sale, import, export, have made, and have sold the
- * Software and the Larger Work(s), and to sublicense the foregoing rights on
- * either these or other terms.
- *
- * This license is subject to the following condition:
- *
- * The above copyright notice and either this complete permission notice or at a
- * minimum a reference to the UPL must be included in all copies or substantial
- * portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
-package com.oracle.truffle.api.dsl.test;
+package jdk.compiler.graal.util.test;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
@@ -46,6 +30,8 @@ import java.util.ArrayList;
 
 import org.graalvm.collections.EconomicMap;
 import org.graalvm.collections.Equivalence;
+
+import jdk.internal.module.Modules;
 
 /**
  * Calculates approximate estimates of the size of an object graph.
@@ -56,6 +42,10 @@ import org.graalvm.collections.Equivalence;
  * The methods {@link #getTotalBytes()} and {@link #getCompressedTotalBytes()} estimate the total
  * number of bytes occupied. The real number of bytes occupied may vary due to different alignment
  * or different header sizes on different virtual machines.
+ *
+ * This utility uses reflection and relies on {@link Modules} to open up classes. As such, the
+ * caller must ensure this class has access to {@link Modules} (e.g.,
+ * {@code --add-exports=java.base/jdk.internal.module=jdk.compiler.graal}).
  */
 public final class ObjectSizeEstimate {
 
@@ -219,9 +209,15 @@ public final class ObjectSizeEstimate {
                                 size.recordPrimitiveBytes(Double.BYTES);
                             } else {
                                 size.recordPointer();
-                                if (maxDepth > 1 && type != Class.class) {
+                                if (maxDepth > 1) {
                                     try {
                                         if (!f.canAccess(o)) {
+                                            Module me = ObjectSizeEstimate.class.getModule();
+                                            Module fm = f.getDeclaringClass().getModule();
+                                            String packageName = f.getDeclaringClass().getPackageName();
+                                            if (!fm.isOpen(packageName, me)) {
+                                                Modules.addOpens(fm, packageName, me);
+                                            }
                                             f.setAccessible(true);
                                         }
                                         Object inner = f.get(o);
